--- a/project/package.json
+++ b/project/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
     "gulp": "^3.9.1",
+    "ngx-cookie": "^2.0.1",
     "rxjs": "^5.4.2",
     "ts-md5": "^1.2.3",
     "zone.js": "^0.8.14"
