--- a/project/package.json
+++ b/project/package.json
@@ -21,14 +21,20 @@
     "@angular/platform-browser": "^5.2.4",
     "@angular/platform-browser-dynamic": "^5.2.4",
     "@angular/router": "^5.2.4",
+    "angular-sqlite": "^0.1.0",
+    "babel-register": "^6.26.0",
     "core-js": "^2.4.1",
     "gulp": "^3.9.1",
+    "gulp-mocha": "^5.0.0",
+    "gulp-typescript": "^4.0.1",
+    "karma-coverage-istanbul-reporter": "^1.4.1",
     "ngx-cookie": "^2.0.1",
     "rxjs": "^5.4.2",
+    "sqlite": "^2.9.1",
+    "sqlite-sync": "^0.3.6",
     "ts-md5": "^1.2.4",
-    "zone.js": "^0.8.14",
-    "karma-coverage-istanbul-reporter": "^1.4.1",
-    "@types/node": "^6.0.100"
+    "webpack": "^3.11.0",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.6.8",
@@ -36,7 +42,7 @@
     "@angular/language-service": "^5.2.4",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~9.4.5",
+    "@types/node": "^6.0.101",
     "codelyzer": "~4.1.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
