--- a/project/src/tsconfig.app.json
+++ b/project/src/tsconfig.app.json
@@ -9,6 +9,8 @@
   "include": [
     "./app/model/Car.ts",
     "Car.ts",
+    "./app/model/user.ts",
+    "User.ts",
     "**/*.ts"
   ],
   "exclude": [
