--- a/project/package.json
+++ b/project/package.json
@@ -33,7 +33,6 @@
     "sqlite": "^2.9.1",
     "sqlite-sync": "^0.3.6",
     "ts-md5": "^1.2.4",
-    "webpack": "^3.11.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -55,6 +54,7 @@
     "protractor": "~5.3.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.1"
+    "typescript": "~2.7.1",
+    "webpack": "^3.11.0"
   }
 }
