--- a/project/package.json
+++ b/project/package.json
@@ -36,7 +36,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.8",
+    "@angular/cli": "^1.7.3",
     "@angular/compiler-cli": "^5.2.4",
     "@angular/language-service": "^5.2.4",
     "@types/jasmine": "~2.8.6",
@@ -54,7 +54,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.1",
-    "webpack": "^3.11.0"
+    "typescript": "^2.4.2"
   }
 }
